fix word wrapping (fixes #42)

--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -48,6 +48,7 @@ body.modders {
         flex: auto;
         margin-left: 24px;
         padding-top: 13px;
+        min-width: 0;
       }
     }
 
